иконка, сплэш, название

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,29 +2,39 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="288"
+    android:viewportHeight="288">
+  <group android:scaleX="0.92"
+      android:scaleY="0.92"
+      android:translateX="11.52"
+      android:translateY="11.52">
+    <path
+        android:pathData="M172.52,202.8L186.47,89.87L138.87,146.64L172.52,202.8Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="88.77"
+            android:startY="26.56"
+            android:endX="174.01"
+            android:endY="168.23"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFFFFFF"/>
+          <item android:offset="1" android:color="#00FFFFFF"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M109,88L95,200C95,207.73 101.27,214 109,214H165C172.73,214 179,207.73 179,200L193,88C193,80.27 186.73,74 179,74H123C115.27,74 109,80.27 109,88ZM185.29,87.61C185.09,84.31 182.35,81.7 179,81.7H123C119.52,81.7 116.7,84.52 116.7,88V88.48L102.71,200.39C102.91,203.69 105.65,206.3 109,206.3H165C168.48,206.3 171.3,203.48 171.3,200V199.52L185.29,87.61Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M109,88L95,200C95,207.73 101.27,214 109,214H165C172.73,214 179,207.73 179,200L193,88C193,80.27 186.73,74 179,74H123C115.27,74 109,80.27 109,88ZM189.5,87.8C189.39,82.09 184.73,77.5 179,77.5H123C117.2,77.5 112.5,82.2 112.5,88V88.22L98.5,200.2C98.61,205.91 103.27,210.5 109,210.5H165C170.8,210.5 175.5,205.8 175.5,200V199.78L189.5,87.8Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M176.96,102.44L141.72,147.78L160.7,180.97C160.8,181.14 160.83,181.35 160.8,181.54C160.76,181.74 160.66,181.91 160.51,182.04L160.35,182.16C160.17,182.26 159.95,182.29 159.75,182.25C159.54,182.2 159.36,182.08 159.24,181.91L136.07,150.45C135.88,150.35 135.71,150.25 135.54,150.13C135.18,149.85 134.88,149.51 134.66,149.12C134.43,148.73 134.29,148.3 134.23,147.86C134.17,147.41 134.2,146.96 134.32,146.52C134.44,146.09 134.64,145.68 134.92,145.33C134.92,145.24 135.05,145.18 135.11,145.1L175.63,101.34C175.76,101.2 175.93,101.11 176.12,101.08C176.3,101.05 176.49,101.08 176.66,101.16C176.73,101.2 176.8,101.25 176.85,101.3C177.01,101.44 177.11,101.64 177.13,101.85C177.15,102.06 177.09,102.27 176.96,102.44Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M176.96,102.36L142.31,147.88L160.97,181.19C161.07,181.37 161.1,181.57 161.07,181.76C161.03,181.96 160.93,182.14 160.78,182.27L138.87,146.8L176.66,101.07C176.74,101.1 176.8,101.15 176.85,101.21C177.01,101.35 177.11,101.55 177.13,101.76C177.15,101.98 177.09,102.19 176.96,102.36Z"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
