--- a/app/src/main/res/layout/fragment_installation_dates.xml
+++ b/app/src/main/res/layout/fragment_installation_dates.xml
@@ -3,15 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="8dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="24dp"
+        android:layout_marginBottom="16dp"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/purple_500"
         android:text="@string/installation_time_header"/>
 
     <androidx.recyclerview.widget.RecyclerView
