--- a/app/src/main/res/layout/item_app.xml
+++ b/app/src/main/res/layout/item_app.xml
@@ -4,12 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_margin="8dp"
+    android:background="@drawable/card_background_corners">
 
     <ImageView
         android:id="@+id/application_icon_image_view"
-        android:layout_width="84dp"
-        android:layout_height="84dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_margin="8dp"
         android:elevation="4dp"
         tools:src="@android:drawable/presence_invisible" />
