--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="almost_black">#3E3E3E</color>
+    <color name="dark_dark_gray">#303030</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="almost_white">#FFFBFBFB</color>
 </resources>
